Fix and categorise (to powers of 10) z-indexes/indices

--- a/_assets/css/less/partials/nav.less
+++ b/_assets/css/less/partials/nav.less
@@ -149,7 +149,7 @@
 				box-shadow: inset 0 -1px 0 @c-neutral-lightest;
 				display: block;
 				position: relative;
-				z-index: 1;
+				z-index: 1000;
 			}
 		}
 	}
